--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -13,21 +13,23 @@
           <div class="collapse navbar-collapse nav justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="#">About</a>
+                <a class="nav-link text-white" aria-current="page" href="{% url 'dashboard:about' %}">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Demo</a>
+                <a class="nav-link text-white" href="{% url 'dashboard:demo' %}">Demo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Antibiogram</a>
+                <a class="nav-link text-white" href="{% url 'dashboard:antibiogram' %}">Antibiogram</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Model Details</a>
+                <a class="nav-link text-white" href="{% url 'dashboard:modeldetails' %}">Model Details</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+
+      About page
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
   </html>
