--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
-    IN SILICO ANTIBIOGRAM TOOL
+    <img src="{% static 'header.png' %}" class="img-fluid" alt="header image">
+    
     <nav class="navbar navbar-expand-lg" style="background-color: #273755;">
-        <div class="container-fluid" style="font-size: 20px;">
-          <div class="collapse navbar-collapse nav justify-content-center" id="navbarNav">
+        <div class="container-fluid nav justify-content-center" style="font-size: 20px;">
+          <div class="nav justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link text-white" aria-current="page" href="{% url 'dashboard:about' %}">About</a>
@@ -29,7 +31,23 @@
         </div>
       </nav>
 
-      About page
+      <br>
+      <div class="card w-75 mx-auto">
+        <div class="card-header">
+          Using Machine Learning Algorithms and Integrons to Predict Antimicrobial Resistance in Common Infection-causing Bacteria
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">In Silico Antibiogram Tool</h5>
+          <p class="card-text">This web-based application built on the machine learning model aims to deliver early detection of 
+            AMR in pathogens and prescription of more effective antibiotics. <br><br>
+            a. The application can read a whole-genome sequencing data.<br>
+            b. The application displays the predicted antibiograms and the accuracy of the prediction. <br>
+            c. The application has a section that displays the integrons associated with AMR. <br>
+            d. The application has demo samples of bacteria isolates for users to see how the application works. <br>
+            e. The application has a section where the user can see the details of prediction models, such as performance summary, that was used to train the data set.</p>
+        </div>
+      </div>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
   </html>
