--- a/dashboard/templates/modeldetails.html
+++ b/dashboard/templates/modeldetails.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
-    IN SILICO ANTIBIOGRAM TOOL
+    <img src="{% static 'header.png' %}" class="img-fluid" alt="header image">
+   
     <nav class="navbar navbar-expand-lg" style="background-color: #273755;">
-      <div class="container-fluid" style="font-size: 20px;">
-        <div class="collapse navbar-collapse nav justify-content-center" id="navbarNav">
+      <div class="container-fluid nav justify-content-center" style="font-size: 20px;">
+        <div class="nav justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link text-white" aria-current="page" href="{% url 'dashboard:about' %}">About</a>
