--- a/dashboard/templates/demo.html
+++ b/dashboard/templates/demo.html
@@ -31,7 +31,108 @@
       </div>
     </nav>
 
-      Demo page
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </body>
-  </html>
+    <br> 
+
+    <div class="card w-50 mx-auto">
+      <div class="card-header">
+        Demo
+      </div>
+      <div class="card-body text-center">
+        <h5 class="card-title">Select a sample</h5>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Some available samples
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">E. coli</a>
+            <a class="dropdown-item" href="#">K. pneumoniae</a>
+            <a class="dropdown-item" href="#">A. baumannii</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br> 
+
+    <div class="row mx-auto">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Predicted Antibiogram</h5>
+            <p class="card-text"></p>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Antibiotic</th>
+                  <th scope="col">Prediction</th>
+                  <th scope="col">Accuracy</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ciprofloxacin</td>
+                  <td>Resistant</td>
+                  <td>89%</td>
+                </tr>
+                <tr>
+                  <td>Cefotaxime</td>
+                  <td>Resistant</td>
+                  <td>91%</td>
+                </tr>
+                <tr>
+                  <td>Ceftriaxone</td>
+                  <td>Resistant</td>
+                  <td>87%</td>
+                </tr>
+                <tr>
+                  <td>Gentamicin</td>
+                  <td>Susceptible</td>
+                  <td>98%</td>
+                </tr>
+                <tr>
+                  <td>Levofloxacin</td>
+                  <td>Susceptible</td>
+                  <td>90%</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Integrons associated with AMR</h5>
+            <p class="card-text"></p>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Integrase Gene</th>
+                  <th scope="col">AMR Genes</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ciprofloxacin</td>
+                  <td>Resistant</td>
+                </tr>
+                <tr>
+                  <td>Cefotaxime</td>
+                  <td>Resistant</td>
+                </tr>
+                <tr>
+                  <td>Ceftriaxone</td>
+                  <td>Resistant</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
+</html>
