--- a/dashboard/templates/antibiogram.html
+++ b/dashboard/templates/antibiogram.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Predict AMR</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
     <img src="{% static 'header.png' %}" class="img-fluid" alt="header image">
-    
+   
     <nav class="navbar navbar-expand-lg" style="background-color: #273755;">
       <div class="container-fluid nav justify-content-center" style="font-size: 20px;">
         <div class="nav justify-content-center" id="navbarNav">
@@ -31,7 +31,134 @@
       </div>
     </nav>
 
-      Antibiogram page
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </body>
-  </html>
+    <br> 
+
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class="card w-50 mx-auto">
+        <div class="card-header">
+          Antibiogram Tool
+        </div>
+        <div class="card-body text-center">
+          <h5 class="card-title">Select a sample</h5>
+          <div class="input-group">
+            <div class="custom-file">
+              <input type="file" class="custom-file-input" id="inputGroupFile04" name="fasta_file">
+              <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+            </div>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="submit" id="inputGroupFileAddon04">Submit</button>
+            </div>
+          </div>
+
+          <script>
+            // Helper function
+            const addFileNameToLabel = file => {
+              const fileName = file.target.files[0].name
+              const customLabel = file.target.nextElementSibling
+              customLabel.textContent = fileName
+            }
+            
+            // Aply to each `.custom-file-label`
+            document.querySelectorAll('.custom-file-input')
+              .forEach(file => file.addEventListener('change', addFileNameToLabel))
+          </script>
+          <style type="text/css">
+            /* Fix for overflowing file name in label */
+            .custom-file-label {
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              padding-right: 80px;
+            }
+          </style>
+
+        </div>
+      </div>
+    </form>
+    
+
+    <br> 
+
+    <div class="row mx-auto">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Predicted Antibiogram</h5>
+            <p class="card-text"></p>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Antibiotic</th>
+                  <th scope="col">Prediction</th>
+                  <th scope="col">Accuracy</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ciprofloxacin</td>
+                  <td>Resistant</td>
+                  <td>89%</td>
+                </tr>
+                <tr>
+                  <td>Cefotaxime</td>
+                  <td>Resistant</td>
+                  <td>91%</td>
+                </tr>
+                <tr>
+                  <td>Ceftriaxone</td>
+                  <td>Resistant</td>
+                  <td>87%</td>
+                </tr>
+                <tr>
+                  <td>Gentamicin</td>
+                  <td>Susceptible</td>
+                  <td>98%</td>
+                </tr>
+                <tr>
+                  <td>Levofloxacin</td>
+                  <td>Susceptible</td>
+                  <td>90%</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Integrons associated with AMR</h5>
+            <p class="card-text"></p>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Integrase Gene</th>
+                  <th scope="col">AMR Genes</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ciprofloxacin</td>
+                  <td>Resistant</td>
+                </tr>
+                <tr>
+                  <td>Cefotaxime</td>
+                  <td>Resistant</td>
+                </tr>
+                <tr>
+                  <td>Ceftriaxone</td>
+                  <td>Resistant</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
+</html>
