--- a/dashboard/templates/demo.html
+++ b/dashboard/templates/demo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Predict AMR</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
     <img src="{% static 'header.png' %}" class="img-fluid" alt="header image">
@@ -39,14 +39,15 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Select a sample</h5>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Some available samples
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">E. coli</a>
-            <a class="dropdown-item" href="#">K. pneumoniae</a>
-            <a class="dropdown-item" href="#">A. baumannii</a>
+        <div class="input-group mb-3">
+          <select class="custom-select" id="inputGroupSelect02">
+            <option selected>Some available samples</option>
+            <option value="1">E. coli</option>
+            <option value="2">K. pneumoniae</option>
+            <option value="3">A. baumannii</option>
+          </select>
+          <div class="input-group-append">
+            <label class="input-group-text" for="inputGroupSelect02">Options</label>
           </div>
         </div>
       </div>
