--- a/dashboard/templates/antibiogram.html
+++ b/dashboard/templates/antibiogram.html
@@ -139,16 +139,8 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Ciprofloxacin</td>
-                  <td>Resistant</td>
-                </tr>
-                <tr>
-                  <td>Cefotaxime</td>
-                  <td>Resistant</td>
-                </tr>
-                <tr>
-                  <td>Ceftriaxone</td>
-                  <td>Resistant</td>
+                  <td>int1</td>
+                  <td>dfrA</td>
                 </tr>
               </tbody>
             </table>
