--- a/dashboard/templates/antibiogram.html
+++ b/dashboard/templates/antibiogram.html
@@ -43,36 +43,14 @@
           <h5 class="card-title">Select a sample</h5>
           <div class="input-group">
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile04" name="fasta_file">
-              <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+              <!-- <input type="file" class="custom-file-input" id="inputGroupFile04" name="fasta_file">
+              <label class="custom-file-label" for="inputGroupFile04">Choose file</label> -->
+              {{ form.fasta_file }}
             </div>
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" type="submit" id="inputGroupFileAddon04">Submit</button>
             </div>
           </div>
-
-          <script>
-            // Helper function
-            const addFileNameToLabel = file => {
-              const fileName = file.target.files[0].name
-              const customLabel = file.target.nextElementSibling
-              customLabel.textContent = fileName
-            }
-            
-            // Aply to each `.custom-file-label`
-            document.querySelectorAll('.custom-file-input')
-              .forEach(file => file.addEventListener('change', addFileNameToLabel))
-          </script>
-          <style type="text/css">
-            /* Fix for overflowing file name in label */
-            .custom-file-label {
-              white-space: nowrap;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              padding-right: 80px;
-            }
-          </style>
-
         </div>
       </div>
     </form>
