--- a/dashboard/templates/modeldetails.html
+++ b/dashboard/templates/modeldetails.html
@@ -117,12 +117,38 @@
           document.getElementById("mcc").innerText = "{{ mcc1 }}";
           document.getElementById("auc").innerText = "{{ auc1 }}";
           document.getElementById("roc").innerText = "{{ roc_curve }}";
-        } else if (selectedOption === "2") {
+          document.getElementById("roc").innerHTML = '<img src="{% static "cefotaxime_roc_curve.png" %}" alt="ROC curve" width="400" height="300">';
+        } 
+        else if (selectedOption === "2") {
           document.getElementById("accuracy").innerText = "{{ accuracy2 }}";
           document.getElementById("precision").innerText = "{{ precision2 }}";
           document.getElementById("recall").innerText = "{{ recall2 }}";
           document.getElementById("mcc").innerText = "{{ mcc2 }}";
           document.getElementById("auc").innerText = "{{ auc2 }}";
+          document.getElementById("roc").innerText = "{{ roc_curve }}";
+        }
+        else if (selectedOption === "3") {
+          document.getElementById("accuracy").innerText = "{{ accuracy3 }}";
+          document.getElementById("precision").innerText = "{{ precision3 }}";
+          document.getElementById("recall").innerText = "{{ recall3 }}";
+          document.getElementById("mcc").innerText = "{{ mcc3 }}";
+          document.getElementById("auc").innerText = "{{ auc3 }}";
+          document.getElementById("roc").innerText = "{{ roc_curve }}";
+        }
+        else if (selectedOption === "4") {
+          document.getElementById("accuracy").innerText = "{{ accuracy4 }}";
+          document.getElementById("precision").innerText = "{{ precision4 }}";
+          document.getElementById("recall").innerText = "{{ recall4 }}";
+          document.getElementById("mcc").innerText = "{{ mcc4 }}";
+          document.getElementById("auc").innerText = "{{ auc4 }}";
+          document.getElementById("roc").innerText = "{{ roc_curve }}";
+        }
+        else if (selectedOption === "5") {
+          document.getElementById("accuracy").innerText = "{{ accuracy5 }}";
+          document.getElementById("precision").innerText = "{{ precision5 }}";
+          document.getElementById("recall").innerText = "{{ recall5 }}";
+          document.getElementById("mcc").innerText = "{{ mcc5 }}";
+          document.getElementById("auc").innerText = "{{ auc5 }}";
           document.getElementById("roc").innerText = "{{ roc_curve }}";
         }
       }
