--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -40,9 +40,9 @@
           <h5 class="card-title">In Silico Antibiogram Tool</h5>
           <p class="card-text">This web-based application built on the machine learning model aims to deliver early detection of 
             AMR in pathogens and prescription of more effective antibiotics. <br><br>
-            a. The application can read a whole-genome sequencing data.<br>
-            b. The application displays the predicted antibiograms and the accuracy of the prediction. <br>
-            c. The application has a section that displays the integrons associated with AMR. <br>
+            a. The application can read a whole-genome sequencing data in FASTA format.<br>
+            b. The application displays the predicted antibiograms. <br>
+            c. The application has a section that displays if integron is present and AMR genes detected on WGS. <br>
             d. The application has demo samples of bacteria isolates for users to see how the application works. <br>
             e. The application has a section where the user can see the details of prediction models, such as performance summary, that was used to train the data set.</p>
         </div>
