--- a/dashboard/templates/demo.html
+++ b/dashboard/templates/demo.html
@@ -66,34 +66,28 @@
                 <tr>
                   <th scope="col">Antibiotic</th>
                   <th scope="col">Prediction</th>
-                  <th scope="col">Accuracy</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Ciprofloxacin</td>
-                  <td>Resistant</td>
-                  <td>89%</td>
-                </tr>
-                <tr>
                   <td>Cefotaxime</td>
-                  <td>Resistant</td>
-                  <td>91%</td>
+                  <td>-</td>
                 </tr>
                 <tr>
                   <td>Ceftriaxone</td>
-                  <td>Resistant</td>
-                  <td>87%</td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td>Ciprofloxacin</td>
+                  <td>-</td>
                 </tr>
                 <tr>
                   <td>Gentamicin</td>
-                  <td>Susceptible</td>
-                  <td>98%</td>
+                  <td>-</td>
                 </tr>
                 <tr>
                   <td>Levofloxacin</td>
-                  <td>Susceptible</td>
-                  <td>90%</td>
+                  <td>-</td>
                 </tr>
               </tbody>
             </table>
@@ -103,27 +97,19 @@
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Integrons associated with AMR</h5>
+            <h5 class="card-title">Integron and AMR Genes</h5>
             <p class="card-text"></p>
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th scope="col">Integrase Gene</th>
-                  <th scope="col">AMR Genes</th>
+                  <th scope="row">Integron:</th>
+                  <td scope="col">{% if integron_presence == 0 %} Integron not found {% elif integron_presence == 1 %} Integron found {% else %} {% endif %}</td>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Ciprofloxacin</td>
-                  <td>Resistant</td>
-                </tr>
-                <tr>
-                  <td>Cefotaxime</td>
-                  <td>Resistant</td>
-                </tr>
-                <tr>
-                  <td>Ceftriaxone</td>
-                  <td>Resistant</td>
+                  <th scope="row">AMR Genes:</th>
+                  <td>{{ abricate_gene_products | join:", "}}</td>
                 </tr>
               </tbody>
             </table>
